...
        android:id="@+id/fab_menu"
        style="@style/FabMain"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/colorPrimary"
        fab:fab_icon="@drawable/fab_add"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:layout_constraintBottom_toBottomOf="@+id/rv_list_transactions"
        fab:layout_constraintEnd_toEndOf="parent"
        fab:layout_constraintHorizontal_bias="0.966"
        fab:layout_constraintStart_toStartOf="parent"
        fab:layout_constraintTop_toTopOf="@+id/rv_list_transactions"
        fab:layout_constraintVertical_bias="1.0">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_new_income"
            style="@style/FabChilds"
            android:theme="@style/AppTheme"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_icon="@drawable/fab_add"
            app:fab_size="mini"
            app:fab_title="@string/new_income" />
...
